Fix the header and accordion header z-index.

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -31,7 +31,7 @@ a {
 header {
     position: sticky;
     top: 0;
-    z-index: 1;
+    z-index: 100;
 }
 
 #logo-img img {
@@ -81,6 +81,11 @@ header {
 #profile-image {
     width: 80px;
     height: 80px;
+}
+
+/*-------------------------------about.html */
+.accordion-header {
+    z-index: -1;
 }
 
 
